crates/oxc_react_compiler/tests/snapshots/bug-binary-operand-type-inference.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/bug-binary-operand-type-inference.js
---
import { c as _c } from "react/compiler-runtime";
import { arrayPush, mutate } from "shared-runtime";
/**
* A binary expression may coerce an object operand to a primitive without making
* every use of that value primitive. Reusing the array across renders would return
* [2] and then [2, 3], instead of [2] and [3].
*/
function useFoo(t0) {
	const $ = _c(2);
	const { value } = t0;
	let result;
	if ($[0] !== value) {
		const x = { value: [] };
		mutate(x);
		const xValue = x.value;
		if (typeof xValue === "number") {
			result = xValue + 1;
		} else {
			result = arrayPush(xValue, value);
		}
		$[0] = value;
		$[1] = result;
	} else {
		result = $[1];
	}
	return result;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{ value: 1 }],
	sequentialRenders: [{ value: 2 }, { value: 3 }]
};
