crates/oxc_react_compiler/tests/snapshots/builtin-jsx-tag-lowered-between-mutations.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/builtin-jsx-tag-lowered-between-mutations.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const maybeMutable = new MaybeMutable();
		t0 = <div>{maybeMutate(maybeMutable)}</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
