crates/oxc_react_compiler/tests/snapshots/call-args-assignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/call-args-assignment.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		x = makeObject();
		x.foo(x = makeObject());
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
