crates/oxc_react_compiler/tests/snapshots/call-args-destructuring-assignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/call-args-destructuring-assignment.js
---
function Component() {}
