crates/oxc_react_compiler/tests/snapshots/call-spread-argument-mutable-iterator.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/call-spread-argument-mutable-iterator.js
---
import { useIdentity } from "shared-runtime";
function useFoo() {
	const it = new Set([1, 2]).values();
	useIdentity();
	return Math.max(...it);
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{}],
	sequentialRenders: [{}, {}]
};
