crates/oxc_react_compiler/tests/snapshots/call-with-independently-memoizable-arg.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/call-with-independently-memoizable-arg.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(4);
	let t0;
	if ($[0] !== props) {
		const x = makeFunction(props);
		let t1;
		if ($[2] !== props.text) {
			t1 = <div><span>{props.text}</span></div>;
			$[2] = props.text;
			$[3] = t1;
		} else {
			t1 = $[3];
		}
		t0 = x(t1);
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const y = t0;
	return y;
}
