crates/oxc_react_compiler/tests/snapshots/call.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/call.js
---
import { c as _c } from "react/compiler-runtime";
function foo() {}
function Component(props) {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const a = [];
		const b = {};
		foo(a, b);
		foo(b);
		t0 = <div a={a} b={b} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
